<resources>
    <string name="app_name">Meu App</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_e_mail">Digite seu E-mail</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="clique_aqui_para_se_cadastrar">Clique aqui para se cadastrar</string>
    <string name="digite_seu_nome">Digite seu nome</string>
</resources>